[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_context"
version = "0.0.2"
description = "Upstream and downstream process reference for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "3.*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.plugins.pyppl]
pyppl_context = "pyppl_context"
